c4prj2_input/grade.txt
Grading at Wed Mar 10 10:20:55 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:29:14: error: incompatible type for argument 1 of ‘print_hand’
   print_hand(fc->decks[fc->n_decks]);
              ^
In file included from input.c:5:0:
deck.h:11:6: note: expected ‘deck_t * {aka struct deck_tag *}’ but argument is of type ‘deck_t {aka struct deck_tag}’
 void print_hand(deck_t * hand);
      ^
input.c:32:10: error: incompatible types when returning type ‘deck_t {aka struct deck_tag}’ but ‘deck_t * {aka struct deck_tag *}’ was expected
   return fc->decks[fc->n_decks-1];
          ^
input.c:33:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
